delete: 住所検索を削除
